first submit 201 class 08 alab

--- a/index.html
+++ b/index.html
@@ -36,10 +36,11 @@
         </ul>
       </section>
       <section>
-        <ul id="feat-sect-banner">
+        <ul>
           <li><img src="https://place-hold.it/480x400/ddd" alt="" /></li>
         </ul>
-        <p>
+        <div>
+          <h2>Featured Section Heading</h2>
           Lorem ipsum dolor sit amet consectetur adipisicing elit. Adipisci
           repellat voluptatem nisi ea, velit repudiandae perspiciatis amet sequi
           voluptatibus laborum doloribus. Fugiat, repellendus qui? Earum maxime
@@ -52,20 +53,10 @@
           harum et iusto maiores architecto dolorem mollitia delectus veniam
           repudiandae quia expedita veritatis laboriosam perferendis, suscipit
           pariatur, aliquam, qui odit. Error esse accusantium itaque?Lorem ipsum
-          dolor sit amet consectetur adipisicing elit. Adipisci repellat
-          voluptatem nisi ea, velit repudiandae perspiciatis amet sequi
-          voluptatibus laborum doloribus. Fugiat, repellendus qui? Earum maxime
-          harum et iusto maiores architecto dolorem mollitia delectus veniam
-          repudiandae quia expedita veritatis laboriosam perferendis, suscipit
-          pariatur, aliquam, qui odit. Error esse accusantium itaque?Lorem ipsum
-          dolor sit amet consectetur adipisicing elit. Adipisci repellat
-          voluptatem nisi ea, velit repudiandae perspiciatis amet sequi
-          voluptatibus laborum doloribus. Fugiat, repellendus qui? Earum maxime
-          harum et iusto maiores architecto dolorem mollitia delectus veniam
-          repudiandae quia expedita veritatis laboriosam Lorem ipsum dolor sit
-          amet, consectetur adipisicing elit. Animi tempore eius nemo.
+          Lorem ipsum dolor sit amet. Lorem, ipsum dolor. Lorem ipsum dolor sit.
+          Lorem, ipsum dolor sit amet
           <button>Call to Action</button>
-        </p>
+        </div>
       </section>
       <footer></footer>
     </main>
