replace div with semantic tag article

--- a/index.html
+++ b/index.html
@@ -39,24 +39,26 @@
         <ul>
           <li><img src="https://place-hold.it/480x400/ddd" alt="" /></li>
         </ul>
-        <div>
+        <article>
           <h2>Featured Section Heading</h2>
-          Lorem ipsum dolor sit amet consectetur adipisicing elit. Adipisci
-          repellat voluptatem nisi ea, velit repudiandae perspiciatis amet sequi
-          voluptatibus laborum doloribus. Fugiat, repellendus qui? Earum maxime
-          harum et iusto maiores architecto dolorem mollitia delectus veniam
-          repudiandae quia expedita veritatis laboriosam perferendis, suscipit
-          pariatur, aliquam, qui odit. Error esse accusantium itaque?Lorem ipsum
-          dolor sit amet consectetur adipisicing elit. Adipisci repellat
-          voluptatem nisi ea, velit repudiandae perspiciatis amet sequi
-          voluptatibus laborum doloribus. Fugiat, repellendus qui? Earum maxime
-          harum et iusto maiores architecto dolorem mollitia delectus veniam
-          repudiandae quia expedita veritatis laboriosam perferendis, suscipit
-          pariatur, aliquam, qui odit. Error esse accusantium itaque?Lorem ipsum
-          Lorem ipsum dolor sit amet. Lorem, ipsum dolor. Lorem ipsum dolor sit.
-          Lorem, ipsum dolor sit amet
-          <button>Call to Action</button>
-        </div>
+          <p>
+            Lorem ipsum dolor sit amet consectetur adipisicing elit. Adipisci
+            repellat voluptatem nisi ea, velit repudiandae perspiciatis amet sequi
+            voluptatibus laborum doloribus. Fugiat, repellendus qui? Earum maxime
+            harum et iusto maiores architecto dolorem mollitia delectus veniam
+            repudiandae quia expedita veritatis laboriosam perferendis, suscipit
+            pariatur, aliquam, qui odit. Error esse accusantium itaque?Lorem ipsum
+            dolor sit amet consectetur adipisicing elit. Adipisci repellat
+            voluptatem nisi ea, velit repudiandae perspiciatis amet sequi
+            voluptatibus laborum doloribus. Fugiat, repellendus qui? Earum maxime
+            harum et iusto maiores architecto dolorem mollitia delectus veniam
+            repudiandae quia expedita veritatis laboriosam perferendis, suscipit
+            pariatur, aliquam, qui odit. Error esse accusantium itaque?Lorem ipsum
+            Lorem ipsum dolor sit amet. Lorem, ipsum dolor. Lorem ipsum dolor sit.
+            Lorem, ipsum dolor sit amet
+            <button>Call to Action</button>
+          </p>
+        </article>
       </section>
       <footer></footer>
     </main>
